<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConnexionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/connexion"
            android:textColor="@color/mainColor"
            android:textSize="30sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconDrawable="@drawable/ic_mail"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewConnexion"
            app:placeholderText="exemple@ploof.com"
            app:placeholderTextColor="#a2b5bb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/e_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passWrdContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/mailContainer"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="@+id/mailContainer"
            app:layout_constraintTop_toBottomOf="@+id/mailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/mot_de_passe">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passWrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtViewPassWrdForgeted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mot_de_passe_oublier"
            android:textColor="@color/mainColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/AccessAccount"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@drawable/button_shape"
            android:elevation="20dp"
            android:padding="15dp"
            android:text="@string/se_connecter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConnecter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/txtViewCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vous_n_avez_pas_de_compte"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <Button
            android:id="@+id/CreateAccount"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/outlined_button_shape"
            android:elevation="20dp"
            android:padding="20dp"
            android:text="@string/inscrivez_vous"
            android:textAllCaps="false"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />

    </LinearLayout>
</FrameLayout>