<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/mainColor">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/indexeye"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/connexion"
                android:textColor="@color/mainColor"
                android:textSize="30sp"
                android:textStyle="bold"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="22dp"
                android:hint="@string/e_mail"
                app:endIconDrawable="@drawable/ic_mail"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewConnexion"
                app:placeholderText="exemple@ploof.com"
                app:placeholderTextColor="#a2b5bb">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passWrdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="18dp"
                android:hint="@string/mot_de_passe"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/mailContainer"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toStartOf="@+id/mailContainer"
                app:layout_constraintTop_toBottomOf="@+id/mailContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passWrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/AccessAccount"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"
                android:elevation="20dp"
                android:padding="15dp"
                android:text="@string/se_connecter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnConnecter">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/txtViewCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vous_n_avez_pas_de_compte"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <Button
                android:id="@+id/CreateAccount"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/outlined_button_shape"
                android:elevation="20dp"
                android:padding="15dp"
                android:text="@string/inscrivez_vous"
                android:textAllCaps="false"
                android:textColor="@color/mainColor"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>