<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InscriptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/txtInscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Inscription"
            android:textColor="@color/mainColor"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearLayoutSteps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConnecter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/progressStep1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1" />

            <ProgressBar
                android:id="@+id/progressStep2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1" />

            <ProgressBar
                android:id="@+id/progressStep3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Etape1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NameInscriptionContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:placeholderTextColor="#a2b5bb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:hint="Nom et Prénoms">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InscriptionNomPrenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/InscriptionMailContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconDrawable="@drawable/ic_mail"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewConnexion"
                app:placeholderText="exemple@ploof.com"
                app:placeholderTextColor="#a2b5bb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/e_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MailInscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Etape2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passWrdIncrptionContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/mailContainer"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toStartOf="@+id/mailContainer"
                app:layout_constraintTop_toBottomOf="@+id/mailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:hint="@string/mot_de_passe">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passWrdInscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ConfirmPassWrdIncrptionContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/mailContainer"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toStartOf="@+id/mailContainer"
                app:layout_constraintTop_toBottomOf="@+id/mailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/confirmer_le_mot_de_passe">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ConfirmPassWrdInscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Etape3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imgViewSucces"
                app:srcCompat="@drawable/ic_check"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtViewSucces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="Votre compte a été créer avec succès !"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtQr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Scanner le code QR"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtQr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/associer_l_appareil_l_aide_d_un_code_qr"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:visibility="visible" />

            <com.budiyev.android.codescanner.CodeScannerView
                android:id="@+id/scanner_view"
                app:autoFocusButtonColor="@color/white"
                app:autoFocusButtonVisible="true"
                app:flashButtonColor="@color/white"
                app:flashButtonVisible="true"
                app:maskColor="#6C000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrecedAndSignIn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/outlined_button_shape"
                android:elevation="40dp"
                android:padding="15dp"
                android:text="Précédant"
                android:textAllCaps="false"
                android:textColor="@color/mainColor"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnNextAndSignIn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_shape"
                android:elevation="40dp"
                android:padding="15dp"
                android:text="Suivant"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtViewAccessAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="Vous avez déjà un compte ? Connectez vous."
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>
</FrameLayout>